--- a/docs/style.css
+++ b/docs/style.css
@@ -53,9 +53,9 @@
  }
 
  span{
-    background-image: linear-gradient(5deg in oklab, #001625, #04619f);
+    background-image: linear-gradient(5deg in oklab, #000000, #000000);
     -webkit-text-stroke: .25px #04619f;
-    text-stroke: .25px #04619f;
+    stroke: .25px #04619f;
     background-clip: text;
     color: transparent;
 }
@@ -92,4 +92,50 @@
 .gradient-btn:active{
     transform: translate(0, 0);
     transition-duration: 100ms;
+}
+
+section{
+  min-height: 100vh;
+  padding: 10rem 15%;
+}
+
+.home{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15rem;
+}
+
+.home-content{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: right;
+}
+
+.home-content h1{
+  font-size: 8rem;
+  font-weight: 700;
+  margin-top: 1.5rem;
+}
+.home-content h3{
+  margin: 1rem 0;
+  font-size: 4rem;
+}
+.home-content p{
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.8;
+}
+
+.home-img img{
+  width: 32vw;
+  border-radius: 50%;
+  box-shadow: 0 0 25px var(--main-color);
+  transition: 0.4s ease-in-out;
+}
+home-img img:hover{
+  box-shadow: 0 0 25px var(--main-color),
+              0 0 50px var(--main-color),
+              0 0 100px var(--main-color);
 }
